--- a/app/index.html
+++ b/app/index.html
@@ -106,7 +106,7 @@
 
         <!-- Select Data -->
 
-        
+
 
     </div>
     <!-- ************************************************************************ -->
@@ -178,7 +178,7 @@
     <script src="js/agency.min.js"></script>
 
 
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
