--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
 </head>
-<body>
+<body ng-app="myApp">
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
@@ -81,7 +81,7 @@
     </header>
     <!-- ************************************************************************ -->
     <!-- Main Content -->
-    <div class="container" ng-app="myApp">
+    <div class="container" ng-controller="myApp">
 
         <!-- Select Rover -->
         <div class="row">
@@ -178,7 +178,7 @@
     <script src="js/agency.min.js"></script>
 
 
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
+  <!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>-->
 
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
