Added ng-controller functionality

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 
 </head>
-<body>
+<body ng-app="myApp">
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
@@ -83,7 +83,7 @@
     </header>
     <!-- ************************************************************************ -->
     <!-- Main Content -->
-    <div class="container" ng-app="myApp">
+    <div class="container" ng-controller="myApp">
 
         <!-- Select Rover -->
         <div class="row">
