--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@
                     <div class="site-heading">
                         <h1>Project Mars</h1>
                         <hr class="small">
-                        <span class="subheading">A Collection of Mars Rover Photographs</span>
+                        <span class="subheading">A Collection of Photographs Taken by Nasa's Mars Rovers</span>
                     </div>
                 </div>
             </div>
