--- a/app/index.html
+++ b/app/index.html
@@ -132,6 +132,7 @@
                     <div class="center">
                     <center>
                         <h3>Earth Day</h3>
+                        <h4>(Year, Month, Day)</h4>
                         <p>
                             Mission Start: {{manifest.photo_manifest.landing_date}}
                         </p>
@@ -150,7 +151,8 @@
                     <div class="center">
                         <center>
 
-                        <h3>Mars Sol</h3>
+                        <h3>Mars Sol </h3>
+                            <h4>(Martian days since landing)</h4>
                         <p>
                             Max Sols: {{manifest.photo_manifest.max_sol}}
                         </p>
@@ -172,7 +174,7 @@
                                     </span>
 
                         </p>
-                        <button class="btn" ng-click="selectDate(false)">GO</button>
+
                     </div>
                     </center>
                 </div>
@@ -183,9 +185,28 @@
                     <p>
                         Choose Sol: <input type="text" ng-model="solDate" />
                     </p>
-                    <button class="btn" ng-click="selectDate(true)">GO</button>
                     </center>
                 </div>
+            </div>
+        </div>
+        <div class="row" ng-hide="isDateSelectHidden">
+            <div class="btn-group">
+                <label class="btn btn-primary">
+                    <input type="radio" checked autocomplete="off">All
+                </label>
+                
+            </div>
+        </div>
+        <div class="row" ng-hide="isDateSelectHidden">
+            <div class="col-xs-6">
+                <center>
+                <button class="btn" ng-click="selectDate(false)">GO</button>
+                </center>
+            </div>
+            <div class="col-xs-6">
+                <center>
+                <button class="btn" ng-click="selectDate(true)">GO</button>
+                </center>
             </div>
         </div>
         <div class="break" ng-hide="isPictureViewHidden"></div>
@@ -203,9 +224,11 @@
             <center>
             <h1>There are either no pictures from this day, or there was an error, so allow us to compensate:</h1>
             <div class="col-xs-2">
+
                 <a ng-click="openLightboxModal($index)">
                     <img width="150" ng-src="a.jpg" class="img-thumbnail">
                 </a>
+
             </div>
             </center>
         </div>
