--- a/app/index.html
+++ b/app/index.html
@@ -189,23 +189,51 @@
                 </div>
             </div>
         </div>
-        <div class="row" ng-hide="isDateSelectHidden">
+        <div class="row" ng-hide="isDateSelectHidden" style="padding: 10px; background-color: #81200c; margin: 10px">
+            <center>
             <div class="btn-group">
                 <label class="btn btn-primary">
-                    <input type="radio" checked autocomplete="off">All
+                    <input type="radio" name="cameras" >All
                 </label>
-                
+                <label class="btn btn-primary">
+                    <input name="cameras" type="radio" >FHAZ
+                </label>
+                <label class="btn btn-primary">
+                    <input type="radio" name="cameras" >RHAZ
+                </label>
+                <label class="btn btn-primary">
+                    <input name="cameras" type="radio" >MAST
+                </label>
+                <label class="btn btn-primary">
+                    <input type="radio" name="cameras" >CHEMCAM
+                </label>
+                <label class="btn btn-primary">
+                    <input type="radio" name="cameras" >MAHLI
+                </label>
+                <label class="btn btn-primary">
+                    <input type="radio" name="cameras" >MARDI
+                </label>
+                <label class="btn btn-primary">
+                    <input type="radio" name="cameras" >NAVCAM
+                </label>
+                <label class="btn btn-primary">
+                    <input type="radio" name="cameras" >PANCAM
+                </label>
+                <label class="btn btn-primary">
+                    <input type="radio" name="cameras" >MINITES
+                </label>
             </div>
+            </center>
         </div>
         <div class="row" ng-hide="isDateSelectHidden">
             <div class="col-xs-6">
                 <center>
-                <button class="btn" ng-click="selectDate(false)">GO</button>
+                <button class="btn" ng-click="selectDate(false)" style="width: 150px">GO</button>
                 </center>
             </div>
             <div class="col-xs-6">
                 <center>
-                <button class="btn" ng-click="selectDate(true)">GO</button>
+                <button class="btn" ng-click="selectDate(true)" style="width: 150px">GO</button>
                 </center>
             </div>
         </div>
@@ -226,7 +254,7 @@
             <div class="col-xs-2">
 
                 <a ng-click="openLightboxModal($index)">
-                    <img width="150" ng-src="a.jpg" class="img-thumbnail">
+                    <img width="150" src="img/marspic.png" class="img-thumbnail">
                 </a>
 
             </div>
