IT WORKS, sort of

--- a/app/index.html
+++ b/app/index.html
@@ -193,34 +193,34 @@
             <center>
             <div class="btn-group">
                 <label class="btn btn-primary">
-                    <input type="radio" name="cameras" >All
+                    <input type="radio" name="cameras" ng-click="selectCamera(null, false)">All
                 </label>
                 <label class="btn btn-primary">
-                    <input name="cameras" type="radio" >FHAZ
+                    <input name="cameras" type="radio" ng-click="selectCamera('FHAZ', true)">FHAZ
                 </label>
                 <label class="btn btn-primary">
-                    <input type="radio" name="cameras" >RHAZ
+                    <input type="radio" name="cameras" ng-click="selectCamera('RHAZ', true)">RHAZ
                 </label>
                 <label class="btn btn-primary">
-                    <input name="cameras" type="radio" >MAST
+                    <input name="cameras" type="radio" ng-click="selectCamera('MAST', true)">MAST
                 </label>
                 <label class="btn btn-primary">
-                    <input type="radio" name="cameras" >CHEMCAM
+                    <input type="radio" name="cameras" ng-click="selectCamera('CHEMCAM', true)">CHEMCAM
                 </label>
                 <label class="btn btn-primary">
-                    <input type="radio" name="cameras" >MAHLI
+                    <input type="radio" name="cameras" ng-click="selectCamera('MAHLI', true)">MAHLI
                 </label>
                 <label class="btn btn-primary">
-                    <input type="radio" name="cameras" >MARDI
+                    <input type="radio" name="cameras" ng-click="selectCamera('MARDI', true)">MARDI
                 </label>
                 <label class="btn btn-primary">
-                    <input type="radio" name="cameras" >NAVCAM
+                    <input type="radio" name="cameras" ng-click="selectCamera('NAVCAM', true)">NAVCAM
                 </label>
                 <label class="btn btn-primary">
-                    <input type="radio" name="cameras" >PANCAM
+                    <input type="radio" name="cameras" ng-click="selectCamera('PANCAM', true)">PANCAM
                 </label>
                 <label class="btn btn-primary">
-                    <input type="radio" name="cameras" >MINITES
+                    <input type="radio" name="cameras" ng-click="selectCamera('MINITES', true)">MINITES
                 </label>
             </div>
             </center>
