--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/home-bg.jpg')">
+    <header class="intro-header" style="background-image: url('img/marscover.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -189,7 +189,12 @@
                 </div>
             </div>
         </div>
-        <div class="row" ng-hide="isDateSelectHidden" style="padding: 10px; background-color: #81200c; margin: 10px">
+        <div class="row">
+            <center>
+                <h3>Pick a camera</h3>
+            </center>
+        </div>
+        <div class="row" ng-hide="isDateSelectHidden" style="padding: 10px; background-color: black; margin: 10px">
             <center>
             <div class="btn-group">
                 <label class="btn btn-primary">
