IT WORKS, sort of

--- a/app/about.html
+++ b/app/about.html
@@ -78,7 +78,28 @@
     <!-- Main Content -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <div class="media">
+                <div class="media-left">
+                    <img class="media-object" src="img/jakelaney.jpg" alt="Jake Laney">
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">Jacob Laney</h4>
+                    Jake Laney is a sophomore from Huntsville, AL majoring in Software Engineering at Auburn University
+                </div>
+            </div>
+        </div>
+        <br><br>
+        <div class="row">
+            <div class="media">
+                <div class="media-body" style="text-align: right">
+                    <h4 class="media-heading">Joseph Cauble</h4>
+                    Joseph Cauble is a sophomore from Trussville, AL majoring in Software Engineering at Auburn University.
+
+                </div>
+                <div class="media-right">
+                    <img class="media-object" width="450" src="img/josephcauble.jpg" alt="Joseph Cauble">
+                </div>
+
             </div>
         </div>
     </div>
@@ -116,7 +137,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+                    <p class="copyright text-muted">Copyright &copy; War Eagle Code 2017</p>
                 </div>
             </div>
         </div>
